<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferComparisonAppActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAppHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/job_offer_comparison"
            android:textColor="#009688"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="322dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginStart="190dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="190dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/menuContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="45dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/editCurrJobBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:height="65dp"
                android:onClick="handleMenuClick"
                android:text="@string/edit_job_btn"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/addNewOfferBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:height="65dp"
                android:onClick="handleMenuClick"
                android:text="@string/add_new_job_offer"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/compareOffersBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:height="65dp"
                android:onClick="handleMenuClick"
                android:text="@string/compare_job_offers"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/adjustSettingsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:height="65dp"
                android:onClick="handleMenuClick"
                android:text="@string/adjust_comparison_settings"
                android:textSize="16sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>