<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".JobDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAppHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/job_offer_comparison"
            android:textColor="#009688"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="322dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginStart="190dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="190dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/screenTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/job_details"
            android:textSize="24sp"
            android:gravity="center"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="507dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/job_title"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/titleInput"
                        android:layout_width="50dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:width="40dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/company"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/companyInput"
                        android:layout_width="93dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:inputType="textPersonName"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/city"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/cityInput"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/State"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/state"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/stateInput"
                        android:layout_width="60dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/costOfLiving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cost_living"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/coiInput"
                        android:layout_width="121dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/annSalLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/annual_sal"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/annualSalaryInput"
                        android:layout_width="126dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:inputType="number|numberDecimal"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/yearlyBonusLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/annual_bonus"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/yearlyBonusInput"
                        android:layout_width="123dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:inputType="number|numberDecimal"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/retrMatchLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ret_match"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/retirementMatchInput"
                        android:layout_width="169dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/relocStipendLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reloc_stipend"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/relocationStipendInput"
                        android:layout_width="176dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:inputType="number|numberDecimal"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/stockAwardLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/rest_stock"
                        android:textSize="20sp"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/restrictedStockAwardInput"
                        android:layout_width="215dp"
                        android:layout_height="48dp"
                        android:layout_weight="0.5"
                        android:inputType="number"
                        android:text="0" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/save"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                app:cornerRadius="15dp"></Button>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>