<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComparisonResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAppHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/job_offer_comparison"
            android:textColor="#009688"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="322dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginStart="190dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="190dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/screenTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/comparison_analysis"
            android:textSize="24sp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="507dp">

            <TableLayout
                android:id="@+id/compareAnalysisTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:stretchColumns="*"></TableLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/compareMoreButton"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="handleCompareMoreClick"
                android:text="@string/compare_more_offers"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="handleMainMenuClick"
                android:text="@string/main_menu"
                app:cornerRadius="15dp"></Button>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>